# deja-claude

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/deja_claude/: __main__.py  actions.py  app.py  models.py  scanner.py  settings.py
src/deja_claude/screens/: confirm_screen.py  export_screen.py  help_screen.py  rename_screen.py
src/deja_claude/widgets/: footer_bar.py  preview_pane.py  project_tree.py  session_table.py
tests/: conftest.py  test_actions.py  test_actions_safety.py  test_app.py  test_main.py  test_models.py  test_scanner.py  test_scanner_edge_cases.py  test_settings.py
